# Silvu-viewfinder

./: Form1.FeatureSet.cs  Form1.cs  MainForm.Designer.cs  README.md  Silvuviewfinder.csproj  Silvuviewfinder.sln  SimulationFeatures.cs  build_err.txt  dev_err.txt  dev_log.txt  dev_log_electron.txt  package-lock.json  package.json  tauri_log2.txt  tauri_log3.txt  tauri_log4.txt  tauri_log5.txt  tauri_log6.txt  tauri_log7.txt  tauri_log8.txt  vite.config.ts
cpp/: CMakeLists.txt
cpp/src/: MainWindow.cpp  MainWindow.h  ViewportWidget.cpp  ViewportWidget.h  main.cpp
cpp/src/data/: ComponentRegistry.cpp  ComponentRegistry.h  DroneAssembly.cpp  DroneAssembly.h  DroneComponent.cpp  DroneComponent.h  components.h
cpp/src/dialogs/: ComponentCatalog.cpp  ComponentCatalog.h
cpp/src/panels/: BuildPanel.cpp  BuildPanel.h  ConfigPanel.cpp  ConfigPanel.h  DiagPanel.cpp  DiagPanel.h  ProtocolPanel.cpp  ProtocolPanel.h  TelemetryBar.cpp  TelemetryBar.h  ToolRibbon.cpp  ToolRibbon.h
cpp/src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
design/mockups/: README.md  controls.js  style-tokens.json  styles.css
legacy_winforms/: Form1.cs  Logger.cs  MainForm.Designer.cs  Program.cs  SimulationFeatures.cs  build_err.txt
legacy_winforms/design/mockups/: index.html  mockup-export-instructions.ps1
legacy_winforms/versions/: vB1.1
src/: App.tsx  index.css
src-tauri/: tauri.conf.json
src/components/layout/: TopNav.tsx
src/components/modes/: BuildMode.tsx  ConfigMode.tsx  ProtocolsMode.tsx
versions/: vB1
